feat: initial product landing page implementation
- Add responsive React components with Tailwind CSS
- Implement modern landing page design
- Include Header, Hero, Features, and Testimonials sections
- Add comprehensive README and SETUP documentation
- Configure for Create React App deployment

Resolves Code-A2Z/code-a2z#901

--- a/package.json
+++ b/package.json
@@ -14,7 +14,24 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
   },
-  "keywords": ["react", "landing-page", "tailwind", "responsive"],
+  "keywords": [
+    "react",
+    "landing-page",
+    "tailwind",
+    "responsive"
+  ],
   "author": "Sendi John",
-  "license": "MIT"
+  "license": "MIT",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
